build(deps-dev): bump @mdx-js/loader from 2.3.0 to 3.0.0

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.23.3",
-    "@mdx-js/loader": "^2.0.0-next.9",
+    "@mdx-js/loader": "^3.0.1",
     "@octokit/auth-action": "^4.0.1",
     "@octokit/rest": "^20.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "next",
@@ -122,13 +122,13 @@
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "redirect-webpack-plugin": "^1.0.0",
-    "remark": "^14.0.2",
+    "remark": "^15.0.1",
     "remark-autolink-headings": "7.0.1",
     "remark-emoji": "^4.0.1",
     "remark-extract-anchors": "1.1.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-html": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "remark-refractor": "montogeek/remark-refractor",
     "rimraf": "^5.0.5",
     "sass": "^1.69.5",
