--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.23.3",
     "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@octokit/auth-action": "^4.0.1",
     "@octokit/rest": "^20.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "next",
     "@svgr/webpack": "^8.1.0",
+    "@types/react": "^18.2.64",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
@@ -151,24 +153,22 @@
     "yarn-deduplicate": "^6.0.2"
   },
   "dependencies": {
-    "@docsearch/react": "^3.0.0-alpha.50",
+    "@docsearch/react": "^3.6.0",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.20.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
+    "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
     "react-tiny-popover": "8",
-    "react-use": "^17.4.2",
-    "react-visibility-sensor": "^5.0.2",
+    "react-use": "^17.5.0",
+    "react-visibility-sensor": "^5.1.1",
     "webpack-pwa-manifest": "^4.3.0",
     "webpack.vote": "https://github.com/webpack/voting-app.git",
     "workbox-window": "^6.5.4"
   },
   "resolutions": {
-    "sitemap-static/minimist": "1.2.5",
-    "ini": "1.3.7",
     "eval": "^0.1.5"
   }
 }
